---------------------------------- 2024-06-26 22:21:00 24.6.26
no todo: scheduler asdf single-run as no respawn or something
---------------------------------- 2024-06-26 22:40:01 24.6.26
no todo: show config-backup if available
---------------------------------- 2024-06-27 04:30:20 24.6.27
no todo: banyan vines protocol in sw
todo: banyan vines appletalk and firends protocols in sw
---------------------------------- 2024-06-27 05:10:52 24.6.27
no todo: upgrade the 3g stack to 4g then 5g with the help of an ettus usrp
---------------------------------- 2024-06-27 12:05:39 24.6.27
no qc pass: p4lang: multilink l2tp3 mpls over vlan
no qc pass: p4lang: multilink l2tp3 routing over vlan
qc pass: p4lang: multilink l2tp3 routing over ipv4
qc pass: p4lang: multilink l2tp3 mpls over ipv4
---------------------------------- 2024-06-27 12:42:16 24.6.27
no qc pass: p4lang: multilink l2tp3 mpls over ipv4
no qc pass: p4lang: multilink l2tp3 routing over ipv4
qc pass: p4lang: multilink l2tp3 routing over vlan
qc pass: p4lang: multilink l2tp3 mpls over vlan
---------------------------------- 2024-06-27 18:16:37 24.6.27
no todo: display asdfsdfas | asciinema <--- same as | pastebin....
no qc pass: xot pad
failed: xot pad
---------------------------------- 2024-06-27 19:23:53 24.6.27
no failed: xot pad
qc pass: xot pad
---------------------------------- 2024-06-29 06:55:56 24.6.29
no todo: flash commander to have file info and hash
no todo: scheduler asdf single-run
no todo: commander to get away the cursor
no todo: flash ext-delete also to commander
---------------------------------- 2024-07-03 09:06:21 24.7.3
no todo: client password-stars to get under the userLine
---------------------------------- 2024-07-10 19:06:28 24.7.10
no todo: openflow to have 2 label support and stack to p4lang
qc pass: openflow: ip routing over backplane
qc pass: openflow: mpls routing over backplane