@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.7.14-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-07-14 06:45:58, took 00:13:05, with 60 workers, on 3442 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2024-07-14 07:41:58, took 00:12:29, with 60 workers, on 3443 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1440,6 +1440,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/opnflw-rout06.tst">opnflw-rout06.tst</a></td><td>success</td><td>openflow: mldp routing</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/opnflw-rout07.tst">opnflw-rout07.tst</a></td><td>success</td><td>openflow: ip routing over backplane</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/opnflw-rout08.tst">opnflw-rout08.tst</a></td><td>success</td><td>openflow: mpls routing over backplane</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/opnflw-rout09.tst">opnflw-rout09.tst</a></td><td>success</td><td>openflow: multicast routing over backplane</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl001.tst">p4lang-acl001.tst</a></td><td>success</td><td>p4lang: copp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl002.tst">p4lang-acl002.tst</a></td><td>success</td><td>p4lang: ingress access list</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl003.tst">p4lang-acl003.tst</a></td><td>success</td><td>p4lang: egress access list</td></tr>
