@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.7.14-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-07-14 06:53:50, took 00:07:34, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2024-07-14 07:51:18, took 00:09:01, with 60 workers, on 546 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
