@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.7.14-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-07-14 06:53:50, took 00:07:34, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-07-14 07:51:18, took 00:09:01, with 60 workers, on 546 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
